alignment fix

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -31,26 +31,26 @@
   }
   .banner-content{
     background-image: url("../images/Group\ 14.png");
-    width: 60%;
-    padding: 50px; 
-    text-align: center;
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    background-size: 100% 100%;
+    padding: 3rem;
+    padding-right: 5rem;
+    padding-left: 5rem;
 }
 .banner-content h3{
-  font-size: 1.5rem;
-  padding: 10px 0;
+  font-size: 1.2rem;
 }
 .banner-content h1{
-  font-size: 2.9rem;
+  font-size: 2.4rem;
 }
 .banner-content p{
-  font-size: .7rem;
+  font-size: .6rem;
   margin: 10px 0;
-  text-align: left;
-  padding-left: 35px;
 }
 .btn-primary{
   padding: 12px 15px;
-  font-size: 16px;
+  font-size: 12px;
   margin-top: 20px;
 }
 .secondary-btn{
